--- a/README
+++ b/README
@@ -5,6 +5,11 @@ TAVERN HERO
 @BunnzoSteel or @discolingua (Twitter)
 
 
+ACKNOWLEDGEMENTS
+
+CanariPack 8BIT TopDown pack (tiles / sprites)
+Kenney Vleugels (Kenney.nl) (sprites)
+
 ===================
 
 STORY
