character pool is in

--- a/README
+++ b/README
@@ -9,6 +9,7 @@ ACKNOWLEDGEMENTS
 
 CanariPack 8BIT TopDown pack (tiles / sprites)
 Kenney Vleugels (Kenney.nl) (sprites)
+@7SoulDesign (pixel art)
 
 ===================
 
